# cmd/app/models/user.go
@@ -6,11 +6,11 @@ import (
 )
 
 type User struct {
-	UUID     string `json:"uuid" gorm:"unique;not null;index;primaryKey"`
-	Username string `json:"username" gorm:"unique;not null;index"`
-	Email    string `json:"email" gorm:"unique;not null;index"`
-	Password string `json:"password"`
-
+	UUID        string `json:"uuid" gorm:"unique;not null;index;primaryKey"`
+	Username    string `json:"username" gorm:"unique;not null;index"`
+	Email       string `json:"email" gorm:"unique;not null;index"`
+	Password    string `json:"password"`
+	PhoneNumber string `json:"phone_number"`
 	gorm.Model
 }
 
