# cmd/docs/swagger.json
@@ -513,7 +513,7 @@
                 }
             }
         },
-        "/api/v1/products/{uuid}": {
+        "/api/v1/products/{cate_id}": {
             "get": {
                 "security": [
                     {
@@ -541,6 +541,36 @@
                             "items": {
                                 "$ref": "#/definitions/schema.Product"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/products/{uuid}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get get product by uuid",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.Product"
                         }
                     }
                 }
@@ -1073,39 +1103,7 @@
         "schema.RazorPayResp": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "amount_due": {
-                    "type": "integer"
-                },
-                "amount_paid": {
-                    "type": "integer"
-                },
-                "attempts": {
-                    "type": "integer"
-                },
-                "created_at": {
-                    "type": "integer"
-                },
-                "currency": {
-                    "type": "string"
-                },
-                "entity": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "string"
-                },
-                "notes": {
-                    "type": "array",
-                    "items": {}
-                },
-                "offer_id": {},
-                "receipt": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
@@ -1115,6 +1113,7 @@
             "required": [
                 "email",
                 "password",
+                "phone_number",
                 "username"
             ],
             "properties": {
@@ -1124,7 +1123,7 @@
                 "password": {
                     "type": "string"
                 },
-                "role_uuid": {
+                "phone_number": {
                     "type": "string"
                 },
                 "username": {
